2008-12-03  Frank Ch. Eigler  <fche@elastic.org>

	PR6925
	* configure.ac: Suggest --prefix if configured without.
	* configure: Regenerated.

2008-12-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 5982: rename -B to -r
	* main.cxx (main): Treat -r REV and -r /PATH as complimentary.
	Imply -p4 if target mismatches host versions.
	(usage): Document -r more.
	* hash.cxx (find_hash): Add in the kernel_build_tree.
	* buildrun.cxx (compile_pass, kernel_built_uprobes): Simplify
	logic.
	* tapsets.cxx (setup_kernel, setup_user): Ditto.
	* translate.cxx (emit_symbol_data): Ditto.
	* stap.1.in: Document -r /PATH.

2008-12-01  Rajan Arora  <rarora@redhat.com>

	PR 5892: Add -B and parameterize all occurences of /lib/modules/...
	* buildrun.cxx (compile_pass, kernel_built_uprobes): Audit
	mentions of /lib/modules/... with path to kernel_build_tree
	provided by -B.
	* tapsets.cxx (setup_kernel, setup_user, mark_builder::build):
	Likewise.
	* translate.cxx (emit_symbol_data): Likewise.
	* session.h (struct systemtap_session): New member kernel_build_tree.
	* main.cxx (main): Add case for 'B' and attempt to fetch Version for
	the kernel build tree using include/config/kernel.release in build
	path, remove -r REV implies -p4 logic altogether.
	

2008-11-29  Frank Ch. Eigler  <fche@elastic.org>

	Warnings cleanup.
	* buildrun.cxx (verify_uprobes_uptodate, make_uprobes): Simplify
	messages.
	* cache.cxx (add_to_cache, clean_cache): Reset s.use_cache upon
	failure.
	* hash.cxx (find_hash): Ditto.
	* main.cxx (main): Simplify/conditionalize warning messages.  Save
	module to $cwd if last_pass==4 but cache encountered errors.

2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 6965.
	* translate.cxx (dump_unwindsyms): Tweak symbols for
	STP_NEED_{SYMBOL,UNWIND}_DATA

2008-11-28  Elliott Baron  <ebaron@redhat.com>

	PR 6965.
	* translate.cxx (dump_unwindsyms): Output #ifdef for
	symbol table.

2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 5376.